# security-webcam

./: .gitignore  LICENSE  README.md  config.json  demo.py  main.py  pyproject.toml  requirements.txt  setup.py
security_webcam/: __init__.py  __main__.py  camera_control.py  motion_detector.py  parser.py  processing.py  security_webcam.py  utils.py  video_buffer.py
security_webcam/motion_detection/: motion_detector.py
src/: utils.py
src/security_webcam/: __init__.py  __main__.py  utils.py
