[tool.poetry]
name = "security-webcam"
version = "0.2.0"
description = "Simple webcam security system."
license = "MIT"
authors = ["Hsuan-Hau Liu <hsuanhauliu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hsuanhauliu/security-webcam"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.2"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"
bandit = "^1.6.2"
vulture = "^1.4"
safety = "^1.8.7"

[tool.poetry.scripts]
security_webcam = "security_webcam.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}